Fixed different color saving for profile pic and profile card spacing

--- a/src/main/resources/css/login.css
+++ b/src/main/resources/css/login.css
@@ -58,7 +58,7 @@
 }
 
 .profileCard{
-	-fx-spacing: -20px;
+	-fx-spacing: -5px;
 	-fx-alignment: top-center;
 	-fx-border-color: rgba(0,0,0,0);
 	-fx-border-radius: 5px;
